--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         <p class="store-name">Warungku App</p>
       </div>
       <div class="search-container">
-        <input type="text" placeholder="Cari" id="search-box" />
+        <input
+          type="text"
+          placeholder="Cari"
+          id="search-box"
+          oninput="search(this.value)"
+        />
         <img
           id="search-icon"
           src="https://www.iconfinder.com/data/icons/font-awesome/1792/search-512.png"
@@ -31,29 +36,8 @@
         />
       </div>
     </div>
-    <div class="container">
-      <div class="card">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga omnis
-      </div>
-      <div class="card">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga omnis
-      </div>
-      <div class="card">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga omnis
-      </div>
-      <div class="card">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga omnis
-      </div>
-      <div class="card">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga omnis
-      </div>
-      <div class="card">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga omnis
-      </div>
-      <div class="card">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga omnis
-      </div>
-    </div>
-    <script src="./app.js" />
+
+    <div class="container"></div>
+    <script src="./app.js"></script>
   </body>
 </html>
