update menu detail

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
           alt="Search"
           title="Search"
         />
+        <img
+          id="search-icon"
+          src="https://image.flaticon.com/icons/png/512/126/126083.png"
+          alt="Search"
+          title="Search"
+        />
+        <div class="counter-barang">0</div>
       </div>
     </div>
 
